--- a/package.json
+++ b/package.json
@@ -7,6 +7,19 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest",
+    "test:features": "node scripts/testIndividualFeatures.js",
+    "test:full": "node scripts/testNewFeatures.js",
+    "test:all": "node scripts/runAllTests.js",
+    "test:maintenance": "node -e \"require('./scripts/testIndividualFeatures.js').tests.testMaintenanceAPI()\"",
+    "test:booking": "node -e \"require('./scripts/testIndividualFeatures.js').tests.testBookingAPI()\"",
+    "test:parking": "node -e \"require('./scripts/testIndividualFeatures.js').tests.testParkingTypeAPI()\"",
+    "test:public": "node scripts/testPublicAPIs.js",
+    "test:integration": "node scripts/testMaintenanceIntegration.js",
+    "test:comprehensive": "node scripts/comprehensiveTest.js",
+    "test:public-access": "node scripts/testPublicAccess.js",
+    "test:maintenance-public": "node scripts/testMaintenanceInPublicBooking.js",
+    "summary": "node scripts/finalSummary.js",
+    "create:admin": "node scripts/createAdminUser.js",
     "build": "npm install --production",
     "build:dev": "npm install",
     "deploy": "npm run build && npm start",
