--- a/package.json
+++ b/package.json
@@ -61,7 +61,10 @@
     "moment": "^2.29.4",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "sharp": "^0.33.0",
+    "uuid": "^9.0.1",
+    "cloudinary": "^2.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
